# fasthcc

./: .gitignore  README.md  README.rst  benchmark.py  pyproject.toml
src/fasthcc/: __init__.py  cli.py  header.py  reader.py
tests/: test_reader.py
