[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fasthcc"
version = "0.1.0"
description = "Fast reader for Telops HCC infrared camera files"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "jasasonc" },
]
dependencies = [
    "numpy",
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/jasasonc/fasthcc"

[project.scripts]
fasthcc = "fasthcc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
