[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fasthcc"
version = "0.2.1"
description = "Fast reader and writer for Telops HCC infrared camera files — no SDK required"
license = "MIT"
requires-python = ">=3.9"
readme = "README.rst"
authors = [
    { name = "jasasonc" },
]
maintainers = [
    { name = "jasasonc" },
]
keywords = [
    "telops",
    "hcc",
    "infrared",
    "thermal",
    "camera",
    "reader",
    "numpy",
]
dependencies = [
    "numpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
homepage = "https://github.com/ladisk/fasthcc"
source = "https://github.com/ladisk/fasthcc"

[project.scripts]
fasthcc = "fasthcc.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/fasthcc/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fasthcc"]
